--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <nav id="navbar" class="navbar navbar-expand-md">
             <div class="container">
                 <a href="/" class="navbar-brand logo">
-                    <span class="logo-name">Marcos Isar</span>
+                    <span class="logo-name">Marcos Isar Martínez</span>
                 </a>
                 <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarMenu">
                     <div class="offcanvas-header">
@@ -163,9 +163,9 @@
     <!-- Skills -->
     <section id="skills">
         <div class="container">
-            <h6 class="text-center"><span class="btn btn-sm theme-button theme-text">What do I know?</span></h6>
+            <h6 class="text-center"><span class="btn btn-sm theme-button theme-text">¿Qué sé yo?</span></h6>
             <h2 class="section-heading text-center">Skills</h2>
-            <p class="text-center muted-text mt-3 mb-4">Here are some of the technologies that are part of my current stack:</p>
+            <p class="text-center muted-text mt-3 mb-4">Estas son algunas de las tecnologías que forman parte de mi pila actual:</p>
             <div class="row justify-content-center row-cols-2 row-cols-md-3 row-cols-lg-6 mt-4 gy-4 skills-container" data-aos="fade-up" data-aos-delay="200">
                 <div class="col">
                     <div class="skill">
@@ -179,12 +179,7 @@
                         <p class="skill-name">CSS</p>
                     </div>
                 </div>
-                <div class="col">
-                    <div class="skill">
-                        <img class="skill-image" src="/assets/images/skills/JS.svg" alt="JavaScript">
-                        <p class="skill-name">JS</p>
-                    </div>
-                </div>
+
                 <div class="col">
                     <div class="skill">
                         <img class="skill-image" src="/assets/images/skills/NodeJS.svg" alt="NodeJS">
@@ -199,32 +194,14 @@
                 </div>
                 <div class="col">
                     <div class="skill">
-                        <img class="skill-image" src="assets/images/skills/EJS.svg" alt="EJS">
-                        <p class="skill-name">EJS</p>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="skill">
                         <img class="skill-image" src="/assets/images/skills/Bootstrap.svg" alt="Bootstrap">
                         <p class="skill-name">Bootstrap</p>
                     </div>
                 </div>
                 <div class="col">
                     <div class="skill">
-                        <img class="skill-image" src="/assets/images/skills/C.svg" alt="C">
+                        <img class="skill-image" src="/assets/images/skills/Unity.png" alt="C">
                         <p class="skill-name">C</p>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="skill">
-                        <img class="skill-image" src="/assets/images/skills/Python.svg" alt="Python">
-                        <p class="skill-name">Python</p>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="skill">
-                        <img class="skill-image" src="/assets/images/skills/MongoDB.svg" alt="MongoDB">
-                        <p class="skill-name">MongoDB</p>
                     </div>
                 </div>
             </div>
@@ -315,12 +292,6 @@
                         </div>
                         <div class="description-container">
                             <p class="description">Próximamente.</p>
-                        </div>
-                        <div class="banner-container cursor-not-allowed">
-                            <div class="overlay">
-                                <i class="bi bi-hourglass-split"></i>
-                            </div>
-                            <img src="/assets/images/projects/simplcalc-banner.webp" class="card-img-top banner" alt="SimplCalc Banner">
                         </div>
                     </div>
                 </div>
