--- a/index.html
+++ b/index.html
@@ -194,13 +194,13 @@
                 </div>
                 <div class="col">
                     <div class="skill">
-                        <img class="skill-image" src="/assets/images/skills/Bootstrap.svg" alt="Bootstrap">
+                        <img class="skill-image" src="/assets/images/skills/Unity.png" alt="Unity">
                         <p class="skill-name">Bootstrap</p>
                     </div>
                 </div>
                 <div class="col">
                     <div class="skill">
-                        <img class="skill-image" src="/assets/images/skills/Unity.png" alt="C">
+                        <img class="skill-image" src="/assets/images/skills/C.svg" alt="C">
                         <p class="skill-name">C</p>
                     </div>
                 </div>
