--- a/index.html
+++ b/index.html
@@ -179,25 +179,6 @@
                         <p class="skill-name">CSS</p>
                     </div>
                 </div>
-
-                <div class="col">
-                    <div class="skill">
-                        <img class="skill-image" src="/assets/images/skills/NodeJS.svg" alt="NodeJS">
-                        <p class="skill-name">NodeJS</p>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="skill">
-                        <img class="skill-image" src="assets/images/skills/ExpressJS.svg" alt="ExpressJS">
-                        <p class="skill-name">ExpressJS</p>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="skill">
-                        <img class="skill-image" src="/assets/images/skills/Unity.png" alt="Unity">
-                        <p class="skill-name">Bootstrap</p>
-                    </div>
-                </div>
                 <div class="col">
                     <div class="skill">
                         <img class="skill-image" src="/assets/images/skills/C.svg" alt="C">
@@ -213,7 +194,7 @@
         <div class="container">
             <h6 class="text-center"><span class="btn btn-sm theme-button theme-text">What I uses?</span></h6>
             <h2 class="section-heading text-center">Tools</h2>
-            <p class="text-center muted-text mt-3 mb-4">Tech stack known? Here are tools that I runs:</p>
+            <p class="text-center muted-text mt-3 mb-4">¿Conoces la pila tecnológica? Estas son las herramientas que utilizo:</p>
             <div class="row justify-content-center row-cols-2 row-cols-md-3 row-cols-lg-6 mt-4 gy-4 tools-container" data-aos="fade-down" data-aos-delay="200">
                 <div class="col">
                     <div class="tool">
@@ -235,8 +216,8 @@
                 </div>
                 <div class="col">
                     <div class="tool">
-                        <img class="tool-image" src="/assets/images/tools/Figma.svg" alt="Figma">
-                        <p class="tool-name">Figma</p>
+                        <img class="tool-image" src="/assets/images/tools/Unity.png" alt="Unity">
+                        <p class="tool-name">Unity</p>
                     </div>
                 </div>
                 <div class="col">
