--- a/index.html
+++ b/index.html
@@ -175,12 +175,6 @@
                 </div>
                 <div class="col">
                     <div class="skill">
-                        <img class="skill-image" src="/assets/images/skills/CSS.svg" alt="CSS"/>
-                        <p class="skill-name">CSS</p>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="skill">
                         <img class="skill-image" src="/assets/images/skills/C.svg" alt="C">
                         <p class="skill-name">C</p>
                     </div>
@@ -192,7 +186,7 @@
     <!-- Tools -->
     <section id="tools">
         <div class="container">
-            <h6 class="text-center"><span class="btn btn-sm theme-button theme-text">What I uses?</span></h6>
+            <h6 class="text-center"><span class="btn btn-sm theme-button theme-text">¿Qué utilizo?</span></h6>
             <h2 class="section-heading text-center">Tools</h2>
             <p class="text-center muted-text mt-3 mb-4">¿Conoces la pila tecnológica? Estas son las herramientas que utilizo:</p>
             <div class="row justify-content-center row-cols-2 row-cols-md-3 row-cols-lg-6 mt-4 gy-4 tools-container" data-aos="fade-down" data-aos-delay="200">
