--- a/index.html
+++ b/index.html
@@ -1,35 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Primary Meta Tags -->
-    <title>Marcos Isar - Porfolio</title>
+    <title>Marcos Isar - Portfolio</title>
+    <meta name="title" content="Marcos Isar - Portfolio">
+    <meta name="description" content="Portfolio profesional de Marcos Isar, Técnico en Animación 3D y desarrollador de experiencias digitales.">
+    <meta name="keywords" content="Marcos Isar, Portfolio, Animación 3D, Desarrollo, Juegos, Web">
+    <meta name="author" content="Marcos Isar">
 
-    <meta name="title" content="Marcos Isar - Porfolio">
-    <meta name="description" content="Vijay Singh - Passionate Frontend Web Developer creating beautiful and responsive websites. Explore my portfolio and blog for tech insights.">
-    <meta name="keywords" content="Vijay Singh, Web Developer, Frontend Developer, Portfolio, Blog, Tech Insights">
-    <meta name="author" content="Vijay Singh">
-
-    <!-- Open Graph Meta Tags / Facebook -->
-    <meta property="og:title" content="Vijay Singh - Frontend Web Developer">
-    <meta property="og:description" content="Passionate about crafting beautiful and responsive websites. Explore my portfolio and blog for tech insights.">
+    <!-- Open Graph -->
+    <meta property="og:title" content="Marcos Isar - Portfolio">
+    <meta property="og:description" content="Portfolio profesional de Marcos Isar, Técnico en Animación 3D y desarrollador de experiencias digitales.">
     <meta property="og:image" content="assets/images/banner.webp">
     <meta property="og:url" content="/">
     <meta property="og:type" content="website">
 
-    <!-- Twitter Card Meta Tags -->
+    <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Vijay Singh - Frontend Web Developer">
-    <meta name="twitter:description" content="Passionate about crafting beautiful and responsive websites. Explore my portfolio and blog for tech insights.">
+    <meta name="twitter:title" content="Marcos Isar - Portfolio">
+    <meta name="twitter:description" content="Portfolio profesional de Marcos Isar, Técnico en Animación 3D y desarrollador de experiencias digitales.">
     <meta name="twitter:image" content="assets/images/banner.webp">
 
     <!-- Favicon -->
     <link rel="icon" href="assets/images/Logo.png" type="image/x-icon">
 
-    <!-- Google Fonts: Rubik -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rubik&amp;display=swap">
+    <!-- Google Fonts -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rubik&display=swap">
 
     <!-- Stylesheets -->
     <link rel="stylesheet" href="assets/css/aos.css">
@@ -39,18 +38,18 @@
     <link rel="stylesheet" href="assets/css/style.css">
 
     <!-- Preload Important resources -->
-    <link rel="preload" href="assets/css/aos.css" as="style" >
-    <link rel="preload" href="assets/css/owl.carousel.min.css" as="style" >
+    <link rel="preload" href="assets/css/aos.css" as="style">
+    <link rel="preload" href="assets/css/owl.carousel.min.css" as="style">
     <link rel="preload" href="assets/css/bootstrap.min.css" as="style" />
     <link rel="preload" href="assets/css/bootstrap-icons.min.css" as="style" />
     <link rel="preload" href="assets/css/style.css" as="style" />
 
     <!-- MS-Clarity Analytics -->
     <script type="text/javascript">
-        (function(c,l,a,r,i,t,y){
-            c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
-            t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
-            y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+        (function (c, l, a, r, i, t, y) {
+            c[a] = c[a] || function () { (c[a].q = c[a].q || []).push(arguments) };
+            t = l.createElement(r); t.async = 1; t.src = "https://www.clarity.ms/tag/" + i;
+            y = l.getElementsByTagName(r)[0]; y.parentNode.insertBefore(t, y);
         })(window, document, "clarity", "script", "phycesbqlg");
     </script>
 
@@ -60,7 +59,7 @@
 
     <!-- Preloader -->
     <div id="preloader"></div>
-    
+
     <!-- Header -->
     <header id="header">
         <nav id="navbar" class="navbar navbar-expand-md">
@@ -72,7 +71,7 @@
                     <div class="offcanvas-header">
                         <a href="/" class="offcanvas-title navbar-brand logo" id="offcanvasNavbarMenu" data-aos="fade-down" data-aos-delay="600">
                             <span><</span>
-                            <span class="logo-name">Vijay Singh</span>
+                            <span class="logo-name">Marcos Isar</span>
                             <span>/></span>
                         </a>
                         <button type="button" class="navbar-toggler" data-bs-dismiss="offcanvas" aria-label="Close Navigation Menu"><i class="bi bi-x toggle-icon"></i></button>
@@ -81,7 +80,7 @@
                         <ul class="navbar-nav nav-underline justify-content-end flex-grow-1">
                             <li class="nav-item" data-aos="fade-down" data-aos-delay="500" data-bs-dismiss="offcanvas"><a href="#hero" class="nav-link active" aria-current="page"> Principal </a></li>
                             <li class="nav-item" data-aos="fade-down" data-aos-delay="600" data-bs-dismiss="offcanvas"><a href="#about" class="nav-link">Sobre</a></li>
-                            <li class="nav-item" data-aos="fade-down" data-aos-delay="700" data-bs-dismiss="offcanvas" ><a href="#skills" class="nav-link">Skills</a></li>
+                            <li class="nav-item" data-aos="fade-down" data-aos-delay="700" data-bs-dismiss="offcanvas"><a href="#skills" class="nav-link">Skills</a></li>
                             <li class="nav-item" data-aos="fade-down" data-aos-delay="800" data-bs-dismiss="offcanvas"><a href="#projects" class="nav-link">Proyectos</a></li>
                             <li class="nav-item" data-aos="fade-down" data-aos-delay="1000" data-bs-dismiss="offcanvas"><a href="#contact" class="nav-link">Contacto</a></li>
                         </ul>
@@ -95,7 +94,7 @@
 
     <!-- Hero -->
     <section id="hero">
-        <div class="container">     
+        <div class="container">
             <div class="row about-content">
                 <div class="col-lg-5 order-lg-2">
                     <div class="hero-portrait">
@@ -104,17 +103,17 @@
                 </div>
                 <div class="col-lg-7 order-lg-1 hero-content">
                     <span class="h3" data-aos="fade-up" data-aos-delay="0">Hola, soy</span>
-                    <h1 class="name" data-aos="fade-up" data-aos-delay="200"><span>Marcos Isar</h1>
+                    <h1 class="name" data-aos="fade-up" data-aos-delay="200"></span>Marcos Isar</h1>
                     <p class="tagline mb-3" data-aos="fade-up" data-aos-delay="600">Desarrollo experiencias digitales donde la creatividad se encuentra con el código.</p>
                     <p>Como Técnico Superior en Animación 3D y desarrollador apasionado por la programación, diseño y construyo juegos y entornos interactivos con enfoque innovador y mentalidad emprendedora. Me impulsa crear proyectos propios, experimentar con nuevas tecnologías y convertir ideas ambiciosas en productos reales.<p>
-                    <div class="social-icons pb-2 pt-2 mb-2">
-                        <a href="https://www.instagram.com/goblinpartyofficial/" target="_blank" class="instagram" data-aos="fade-up" data-aos-delay="660"><i class="bi bi-instagram"></i></a>
-                        <a href="https://www.youtube.com/@GoblinPartyOfficial" target="_blank" class="youtube" data-aos="fade-up" data-aos-delay="680"><i class="bi bi-youtube"></i></a>
-                    </div>
-                    <div class="d-flex call-to-action">
-                        <a href="#contact" data-aos="fade-up" data-aos-delay="700"><button type="button" class="btn me-4 primary-bg-btn"><i class="bi bi-envelope"></i> Contacto </button></a>
-                        <a href="#projects" data-aos="fade-up" data-aos-delay="800"><button type="button" class="btn btn-light secondary-bg-btn"> Porfolio <i class="bi bi-arrow-up-right-circle"></i></button></a>
-                    </div>                    
+                        <div class="social-icons pb-2 pt-2 mb-2">
+                            <a href="https://www.instagram.com/goblinpartyofficial/" target="_blank" class="instagram" data-aos="fade-up" data-aos-delay="660"><i class="bi bi-instagram"></i></a>
+                            <a href="https://www.youtube.com/@GoblinPartyOfficial" target="_blank" class="youtube" data-aos="fade-up" data-aos-delay="680"><i class="bi bi-youtube"></i></a>
+                        </div>
+                        <div class="d-flex call-to-action">
+                            <a href="#contact" data-aos="fade-up" data-aos-delay="700"><button type="button" class="btn me-4 primary-bg-btn"><i class="bi bi-envelope"></i> Contacto </button></a>
+                            <a href="#projects" data-aos="fade-up" data-aos-delay="800"><button type="button" class="btn btn-light secondary-bg-btn"> Porfolio <i class="bi bi-arrow-up-right-circle"></i></button></a>
+                        </div>
                 </div>
             </div>
         </div>
@@ -126,7 +125,7 @@
             <h6 class="text-center"><span class="btn btn-sm theme-button theme-text">Sobre mi</span></h6>
             <h2 class="section-heading text-center">Cosas de mi</h2>
             <div class="row justify-content-center pt-3 gy-4">
-                <div class="col-lg-4 col-md-6" data-aos="fade-up" >
+                <div class="col-lg-4 col-md-6" data-aos="fade-up">
                     <div class="card">
                         <div class="circle-container">
                             <div class="circle"><i class="bi bi-code-slash"></i></i></div>
@@ -154,8 +153,8 @@
                 </div>
                 <div class="col-lg-7">
                     <p class="bio">
-                        Soy una persona que cree que la creatividad y la tecnología juntas pueden cambiar la manera en que vivimos experiencias. Desde mis primeros pasos en el mundo de la animación 3D, hasta programar mis propios juegos y entornos interactivos, mi camino ha sido un viaje de aprendizaje constante, experimentación y pasión por crear mundos que emocionen.<3
-                 </div>
+                        Soy una persona que cree que la creatividad y la tecnología juntas pueden cambiar la manera en que vivimos experiencias. Desde mis primeros pasos en el mundo de la animación 3D, hasta programar mis propios juegos y entornos interactivos, mi camino ha sido un viaje de aprendizaje constante, experimentación y pasión por crear mundos que emocionen.<3>
+                </div>
             </div>
         </div>
     </section>
@@ -171,6 +170,12 @@
                     <div class="skill">
                         <img class="skill-image" src="/assets/images/skills/HTML.svg" alt="HTML">
                         <p class="skill-name">HTML</p>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="skill">
+                        <img class="skill-image" src="/assets/images/skills/CSS.svg" alt="C">
+                        <p class="skill-name">CSS</p>
                     </div>
                 </div>
                 <div class="col">
@@ -210,7 +215,7 @@
                 </div>
                 <div class="col">
                     <div class="tool">
-                        <img class="tool-image" src="/assets/images/tools/Unity.png" alt="Unity">
+                        <img class="tool-image" src="/assets/images/tools/Unity.svg" alt="Unity">
                         <p class="tool-name">Unity</p>
                     </div>
                 </div>
@@ -230,7 +235,7 @@
         </div>
     </section>
 
-    <!-- Timelines 
+    <!-- Timelines
     <section id="timelines">
         <div class="container">
             <h6 class="text-center"><span class="btn btn-sm theme-button theme-text">What am Doing?</span></h6>
@@ -241,8 +246,6 @@
             </div>
         </div>
     </section> -->
-            
-
     <!-- Projects -->
     <section id="projects">
         <div class="container">
@@ -277,7 +280,7 @@
     <!-- Contact -->
     <section id="contact">
         <div class="container">
-            <h6 class="text-center"><span class="btn btn-sm theme-button theme-text">Contáctame<span></h6>
+            <h6 class="text-center"><span class="btn btn-sm theme-button theme-text">Contáctame</span></h6>
             <h2 class="section-heading text-center">Ponte en contacto conmigo</h2>
             <p class="text-center muted-text mt-3 mb-4">¿Te interesa trabajar juntos? Deberíamos quedar para charlar. Yo llevaré el café.</p>
             <div class="row justify-content-center" data-aos="fade-down" data-aos-delay="500">
@@ -297,7 +300,7 @@
                                 </div>
                                 <div class="col-md-12">
                                     <div class="form-group">
-                                        <input type="text" class="form-control" id="subject" name="subject"  placeholder="Contenido *" required>
+                                        <input type="text" class="form-control" id="subject" name="subject" placeholder="Contenido *" required>
                                     </div>
                                 </div>
                                 <div class="col-md-12">
