--- a/index.html
+++ b/index.html
@@ -253,17 +253,20 @@
             <h2 class="section-heading text-center">Proyectos</h2>
             <div class="row justify-content-center mt-4 gy-4" data-aos="fade-up" data-aos-delay="200">
                 <div class="col-lg-4 col-md-6">
-                    <div class="card project-card cursor-not-allowed">
+                    <div class="card project-card">
                         <div class="card-body ">
                             <div class="d-flex align-items-center">
                                 <div class="col-2">
-                                    <img src="/assets/images/projects/Main_Logo.png" class="img-fluid icon" alt="SimplCalc Icon">
+                                    <img src="/assets/images/projects/Main_Logo.png" class="img-fluid icon" alt="Bone Path Icon">
                                 </div>
                                 <div class="col-7 p-0">
                                     <span class="card-title title">Bone Path</span>
                                     <p class="stacks m-0">C#</p>
                                 </div>
-                                <div class="col-3 align-middle">
+                                <div class="col-3 align-middle d-flex flex-column align-items-end">
+                                    <button class="btn btn-sm btn-success mb-1">
+                                        <a href="https://goblinpartyofficial.github.io/" target="_blank" class="text-white text-decoration-none">Ver página</a>
+                                    </button>
                                     <button class="btn btn-sm in-progress cursor-not-allowed">En progreso</button>
                                 </div>
                             </div>
@@ -273,6 +276,7 @@
                         </div>
                     </div>
                 </div>
+
             </div>
         </div>
     </section>
