--- a/index.html
+++ b/index.html
@@ -272,10 +272,33 @@
                             </div>
                         </div>
                         <div class="description-container">
+                            <p class="description">¡Muy pronto disponible!</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-6">
+                    <div class="card project-card">
+                        <div class="card-body ">
+                            <div class="d-flex align-items-center">
+                                <div class="col-2">
+                                    <img src="/assets/images/projects/The_Last_Carriage.png" class="img-fluid icon" alt="The Last Carriage">
+                                </div>
+                                <div class="col-7 p-0">
+                                    <span class="card-title title">The Last Carriage</span>
+                                    <p class="stacks m-0">C#</p>
+                                </div>
+                                <div class="col-3 align-middle d-flex flex-column align-items-end">
+                                    <button class="btn btn-sm in-primary cursor-not-allowed">Próximamente</button>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="description-container">
                             <p class="description">Próximamente.</p>
                         </div>
                     </div>
                 </div>
+            </div>
 
             </div>
         </div>
