--- a/index.html
+++ b/index.html
@@ -264,9 +264,6 @@
                                     <p class="stacks m-0">C#</p>
                                 </div>
                                 <div class="col-3 align-middle d-flex flex-column align-items-end">
-                                    <button class="btn btn-sm btn-success mb-1">
-                                        <a href="https://goblinpartyofficial.github.io/" target="_blank" class="text-white text-decoration-none">Ver página</a>
-                                    </button>
                                     <button class="btn btn-sm in-progress cursor-not-allowed">En progreso</button>
                                 </div>
                             </div>
@@ -274,6 +271,9 @@
                         <div class="description-container">
                             <p class="description">¡Muy pronto disponible!</p>
                         </div>
+                        <button class="btn btn-sm btn-success mb-1">
+                            <a href="https://goblinpartyofficial.github.io/" target="_blank" class="text-white text-decoration-none">Ver página</a>
+                        </button>
                     </div>
                 </div>
 
@@ -289,7 +289,7 @@
                                     <p class="stacks m-0">C#</p>
                                 </div>
                                 <div class="col-3 align-middle d-flex flex-column align-items-end">
-                                    <button class="btn btn-sm in-primary cursor-not-allowed">Próximamente</button>
+                                    <button class="btn btn-sm in-progress cursor-not-allowed">En progreso</button>
                                 </div>
                             </div>
                         </div>
