--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
                                     <p class="stacks m-0">C#</p>
                                 </div>
                                 <div class="col-3 align-middle d-flex flex-column align-items-end">
-                                    <button class="btn btn-sm in-progress cursor-not-allowed">En progreso</button>
+                                    <button class="btn btn-sm in-progress cursor-not-allowed">Próximamente</button>
                                 </div>
                             </div>
                         </div>
