--- a/index.html
+++ b/index.html
@@ -221,14 +221,14 @@
                 </div>
                 <div class="col">
                     <div class="tool">
-                        <img class="tool-image" src="/assets/images/tools/ChatGPT.svg" alt="ChatGPT">
-                        <p class="tool-name">ChatGPT</p>
+                        <img class="tool-image" src="/assets/images/tools/Maya.png" alt="Maya">
+                        <p class="tool-name">Maya</p>
                     </div>
                 </div>
                 <div class="col">
                     <div class="tool">
-                        <img class="tool-image" src="/assets/images/tools/Gemini.svg" alt="Gemini">
-                        <p class="tool-name">Gemini</p>
+                        <img class="tool-image" src="/assets/images/tools/AdobeAfterEffects.svg" alt="AdobeAfterEffects">
+                        <p class="tool-name">After Effects</p>
                     </div>
                 </div>
             </div>
