--- a/index.html
+++ b/index.html
@@ -227,8 +227,26 @@
                 </div>
                 <div class="col">
                     <div class="tool">
+                        <img class="tool-image" src="/assets/images/tools/AdobePhotoshop.svg" alt="AdobePhotoshop">
+                        <p class="tool-name">Adobe Photoshop</p>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="tool">
+                        <img class="tool-image" src="/assets/images/tools/AdobePremiere.svg" alt="AdobePremiere">
+                        <p class="tool-name">Adobe Premiere</p>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="tool">
                         <img class="tool-image" src="/assets/images/tools/AdobeAfterEffects.svg" alt="AdobeAfterEffects">
                         <p class="tool-name">After Effects</p>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="tool">
+                        <img class="tool-image" src="/assets/images/tools/AdobeIllustrator.svg" alt="AdobeIllustrator">
+                        <p class="tool-name">Adobe Illustrator</p>
                     </div>
                 </div>
             </div>
