--- a/index.html
+++ b/index.html
@@ -249,6 +249,12 @@
                         <p class="tool-name">Adobe Illustrator</p>
                     </div>
                 </div>
+                <div class="col">
+                    <div class="tool">
+                        <img class="tool-image" src="/assets/images/tools/MicrosoftOffice.svg" alt="MicrosoftOffice">
+                        <p class="tool-name">Microsoft Office</p>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
