--- a/index.html
+++ b/index.html
@@ -197,20 +197,14 @@
             <div class="row justify-content-center row-cols-2 row-cols-md-3 row-cols-lg-6 mt-4 gy-4 tools-container" data-aos="fade-down" data-aos-delay="200">
                 <div class="col">
                     <div class="tool">
-                        <img class="tool-image" src="/assets/images/tools/vscode.svg" alt="VSCode">
-                        <p class="tool-name">VSCode</p>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="tool">
                         <img class="tool-image" src="/assets/images/tools/github.svg" alt="Github">
                         <p class="tool-name">Github</p>
                     </div>
                 </div>
                 <div class="col">
                     <div class="tool">
-                        <img class="tool-image" src="/assets/images/tools/canva.svg" alt="Canva">
-                        <p class="tool-name">Canva</p>
+                        <img class="tool-image" src="/assets/images/tools/vscode.svg" alt="VSCode">
+                        <p class="tool-name">VSCode</p>
                     </div>
                 </div>
                 <div class="col">
@@ -223,6 +217,12 @@
                     <div class="tool">
                         <img class="tool-image" src="/assets/images/tools/Maya.png" alt="Maya">
                         <p class="tool-name">Maya</p>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="tool">
+                        <img class="tool-image" src="/assets/images/tools/MicrosoftOffice.svg" alt="MicrosoftOffice">
+                        <p class="tool-name">Microsoft Office</p>
                     </div>
                 </div>
                 <div class="col">
@@ -247,12 +247,6 @@
                     <div class="tool">
                         <img class="tool-image" src="/assets/images/tools/AdobeIllustrator.svg" alt="AdobeIllustrator">
                         <p class="tool-name">Adobe Illustrator</p>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="tool">
-                        <img class="tool-image" src="/assets/images/tools/MicrosoftOffice.svg" alt="MicrosoftOffice">
-                        <p class="tool-name">Microsoft Office</p>
                     </div>
                 </div>
             </div>
@@ -292,12 +286,13 @@
                                 </div>
                             </div>
                         </div>
+
                         <div class="description-container">
                             <p class="description">¡Muy pronto disponible!</p>
                         </div>
-                        <button class="btn btn-sm btn-success mb-1">
-                            <a href="https://goblinpartyofficial.github.io/" target="_blank" class="text-white text-decoration-none">Ver página</a>
-                        </button>
+                        <div class="col-3 align-middle">
+                            <a href="https://goblinpartyofficial.github.io//" class="btn btn-sm primary-bg-btn rounded-5" target="_blank">Visitar <i class="bi bi-arrow-up-right-circle-fill"></i></a>
+                        </div>
                     </div>
                 </div>
 
