--- a/index.html
+++ b/index.html
@@ -122,17 +122,39 @@
     <!-- Things I Love -->
     <section id="things-i-love">
         <div class="container">
-            <h6 class="text-center"><span class="btn btn-sm theme-button theme-text">Sobre mi</span></h6>
-            <h2 class="section-heading text-center">Cosas de mi</h2>
+            <h6 class="text-center"><span class="btn btn-sm theme-button theme-text">Interés</span></h6>
+            <h2 class="section-heading text-center">Cosas que amo</h2>
             <div class="row justify-content-center pt-3 gy-4">
+                <div class="col-lg-4 col-md-6" data-aos="fade-up">
+                    <div class="card">
+                        <div class="circle-container">
+                            <div class="circle"><i class="bi bi-droplet-half"></i></div>
+                        </div>
+                        <div class="card-body">
+                            <p class="card-title">Designing</p>
+                            <p class="card-text">Me encanta diseñar. Cuando veo algo que necesita mejorar, disfruto haciéndolo más atractivo visualmente. Presto atención a cada detalle, ya sea un gráfico o una interfaz de usuario. Mi objetivo es crear diseños que llamen la atención e inspiren a los demás.</p>
+                        </div>
+                    </div>
+                </div>
                 <div class="col-lg-4 col-md-6" data-aos="fade-up">
                     <div class="card">
                         <div class="circle-container">
                             <div class="circle"><i class="bi bi-code-slash"></i></i></div>
                         </div>
                         <div class="card-body">
-                            <p class="card-title">Programación</p>
-                            <p class="card-text">Pues programo y esas cosas de programador que programan cosas de programación.</p>
+                            <p class="card-title">Desarrollo</p>
+                            <p class="card-text">Después del diseño, me sumerjo en el desarrollo. La programación es donde doy vida a los diseños, convirtiendo los conceptos en experiencias digitales. Cada línea de código refleja mi visión de funcionalidad y elegancia, mostrando mi compromiso con la excelencia.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6" data-aos="fade-up">
+                    <div class="card">
+                        <div class="circle-container">
+                            <div class="circle"><i class="bi bi-cup-hot"></i></div>
+                        </div>
+                        <div class="card-body">
+                            <p class="card-title">Ampliando</p>
+                            <p class="card-text">Más allá de la creación, optimizo. Desde plantillas hasta sitios web completos, perfecciono el desarrollo posterior. Aprovechando los blogs y el SEO básico, mejoro la visibilidad y el impacto en línea. Cada paso maximiza el alcance y la eficacia en línea.</p>
                         </div>
                     </div>
                 </div>
@@ -286,10 +308,10 @@
                                 </div>
                             </div>
                         </div>
-
                         <div class="description-container">
                             <p class="description">¡Muy pronto disponible!</p>
                         </div>
+
                         <div class="col-3 align-middle">
                             <a href="https://goblinpartyofficial.github.io//" class="btn btn-sm primary-bg-btn rounded-5" target="_blank">Visitar <i class="bi bi-arrow-up-right-circle-fill"></i></a>
                         </div>
