--- a/index.html
+++ b/index.html
@@ -129,9 +129,9 @@
                     <div class="card">
                         <div class="circle-container">
                             <div class="circle"><i class="bi bi-droplet-half"></i></div>
-                        </div>
+                        </div   
                         <div class="card-body">
-                            <p class="card-title">Designing</p>
+                            <p class="card-title">Diseño</p>
                             <p class="card-text">Me encanta diseñar. Cuando veo algo que necesita mejorar, disfruto haciéndolo más atractivo visualmente. Presto atención a cada detalle, ya sea un gráfico o una interfaz de usuario. Mi objetivo es crear diseños que llamen la atención e inspiren a los demás.</p>
                         </div>
                     </div>
