--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 </div>
                 <div class="col-lg-7 order-lg-1 hero-content">
                     <span class="h3" data-aos="fade-up" data-aos-delay="0">Hola, soy</span>
-                    <h1 class="name" data-aos="fade-up" data-aos-delay="200"></span>Marcos Isar</h1>
+                    <h1 class="name" data-aos="fade-up" data-aos-delay="200">Marcos Isar</h1>
                     <p class="tagline mb-3" data-aos="fade-up" data-aos-delay="600">Desarrollo experiencias digitales donde la creatividad se encuentra con el código.</p>
                     <p>Como Técnico Superior en Animación 3D y desarrollador apasionado por la programación, diseño y construyo juegos y entornos interactivos con enfoque innovador y mentalidad emprendedora. Me impulsa crear proyectos propios, experimentar con nuevas tecnologías y convertir ideas ambiciosas en productos reales.<p>
                         <div class="social-icons pb-2 pt-2 mb-2">
@@ -108,8 +108,12 @@
                             <a href="https://www.youtube.com/@GoblinPartyOfficial" target="_blank" class="youtube" data-aos="fade-up" data-aos-delay="680"><i class="bi bi-youtube"></i></a>
                         </div>
                         <div class="d-flex call-to-action">
-                            <a href="#contact" data-aos="fade-up" data-aos-delay="700"><button type="button" class="btn me-4 primary-bg-btn"><i class="bi bi-envelope"></i> Contacto </button></a>
-                            <a href="#projects" data-aos="fade-up" data-aos-delay="800"><button type="button" class="btn btn-light secondary-bg-btn"> Porfolio <i class="bi bi-arrow-up-right-circle"></i></button></a>
+                            <a href="#contact" class="btn me-4 primary-bg-btn" data-aos="fade-up" data-aos-delay="700">
+                                <i class="bi bi-envelope"></i> Contacto
+                            </a>
+                            <a href="#projects" class="btn btn-light secondary-bg-btn" data-aos="fade-up" data-aos-delay="800">
+                                Porfolio <i class="bi bi-arrow-up-right-circle"></i>
+                            </a>
                         </div>
                 </div>
             </div>
@@ -136,7 +140,7 @@
                 <div class="col-lg-4 col-md-6" data-aos="fade-up">
                     <div class="card">
                         <div class="circle-container">
-                            <div class="circle"><i class="bi bi-code-slash"></i></i></div>
+                            <div class="circle"><i></i> class="bi bi-code-slash"></div>
                         </div>
                         <div class="card-body">
                             <p class="card-title">Desarrollo</p>
@@ -338,7 +342,6 @@
                 </div>
             </div>
 
-            </div>
         </div>
     </section>
 
