--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@
                             <div class="circle"><i class="bi bi-droplet-half"></i></div>
                         </div>  
                         <div class="card-body">
-                            <p class="card-title">Diseño</p>
-                            <p class="card-text">Me encanta diseñar. Cuando veo algo que necesita mejorar, disfruto haciéndolo más atractivo visualmente. Presto atención a cada detalle, ya sea un gráfico o una interfaz de usuario. Mi objetivo es crear diseños que llamen la atención e inspiren a los demás.</p>
+                            <p class="card-title">Creatividad Visual</p>
+                            <p class="card-text">Me apasiona crear contenido digital y mejorar proyectos visuales. Cuando veo algo que puede optimizarse, disfruto haciéndolo más atractivo y profesional. Presto atención a cada detalle para que el resultado final impacte y transmita lo que quiero comunicar. Mi objetivo es que cada proyecto cuente una historia y capture la atención de quien lo vea.</p>
                         </div>
                     </div>
                 </div>
@@ -144,7 +144,7 @@
                         </div>
                         <div class="card-body">
                             <p class="card-title">Desarrollo</p>
-                            <p class="card-text">Después del diseño, me sumerjo en el desarrollo. La programación es donde doy vida a los diseños, convirtiendo los conceptos en experiencias digitales. Cada línea de código refleja mi visión de funcionalidad y elegancia, mostrando mi compromiso con la excelencia.</p>
+                            <p class="card-text">Me apasiona transformar ideas en experiencias digitales funcionales. Cada línea de código que escribo tiene un propósito: mejorar la interactividad, la eficiencia y la experiencia del usuario. Disfruto enfrentándome a nuevos retos, explorando soluciones creativas y viendo cómo los proyectos cobran vida desde la planificación hasta la ejecución.</p>
                         </div>
                     </div>
                 </div>
@@ -154,8 +154,8 @@
                             <div class="circle"><i class="bi bi-cup-hot"></i></div>
                         </div>
                         <div class="card-body">
-                            <p class="card-title">Ampliando</p>
-                            <p class="card-text">Más allá de la creación, optimizo. Desde plantillas hasta sitios web completos, perfecciono el desarrollo posterior. Aprovechando los blogs y el SEO básico, mejoro la visibilidad y el impacto en línea. Cada paso maximiza el alcance y la eficacia en línea.</p>
+                            <p class="card-title">Visión</p>
+                            <p class="card-text">Siempre estoy mirando hacia adelante, buscando aprender y crecer en cada proyecto. Mi objetivo es seguir explorando nuevas tecnologías, enfrentar desafíos más complejos y crear experiencias digitales que dejen huella. Me motiva imaginar lo que aún no existe y trabajar para convertir esas ideas en realidad.</p>
                         </div>
                     </div>
                 </div>
