--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <nav id="navbar" class="navbar navbar-expand-md">
             <div class="container">
                 <a href="/" class="navbar-brand logo">
-                    <span class="logo-name">Marcos Isar</span>
+                    <span class="logo-name">Marcos Isarr</span>
                 </a>
                 <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarMenu">
                     <div class="offcanvas-header">
